fix: deploy mongodb and fixing repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=TheBoys-Backend
 server.port=8080
+
+spring.data.mongodb.uri=mongodb://mongo:TjHWmQgDLpCzfkneGgJLmTfJFQmmVAtC@centerbeam.proxy.rlwy.net:15076/theboys
+
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
