--- a/pom.xml
+++ b/pom.xml
@@ -124,8 +124,8 @@
                         </goals>
                         <configuration>
                             <excludes>
-                                <exclude>**/model/*</exclude>
-                                <exclude>**/dto/*</exclude>
+                                <exclude>**/model/**</exclude>
+                                <exclude>**/dto/**</exclude>
 								<exclude>**/enums/**</exclude>
                                 <exclude>**/config/*</exclude>
 								<exclude>**/mapper/*</exclude>
@@ -160,8 +160,8 @@
                                 </rule>
                             </rules>
                             <excludes>
-                                <exclude>**/model/*</exclude>
-                                <exclude>**/dto/*</exclude>
+                                <exclude>**/model/**</exclude>
+                                <exclude>**/dto/**</exclude>
 								<exclude>**/enums/**</exclude>
                                 <exclude>**/config/*</exclude>
 								<exclude>**/mapper/*</exclude>
