feat: Swagger - Sebastian - Tulio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TheBoys-Backend
 server.port=8080
 
-spring.data.mongodb.uri=mongodb://mongo:TjHWmQgDLpCzfkneGgJLmTfJFQmmVAtC@centerbeam.proxy.rlwy.net:15076/theboys
+spring.data.mongodb.uri=mongodb://mongo:CdxpCfpWPSZDDdmYWFSbOJmTHcFomzgR@mainline.proxy.rlwy.net:34099/theboys
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
