--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TheBoys-Backend
 server.port=8080
 
-spring.data.mongodb.uri=mongodb://mongo:CdxpCfpWPSZDDdmYWFSbOJmTHcFomzgR@mainline.proxy.rlwy.net:34099/theboys
+spring.data.mongodb.uri=mongodb+srv://danpame1219_db_user:Sirha2025-2@sirhadb.iblyyvg.mongodb.net/theboysdb?retryWrites=true&w=majority
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
