chore(ci): update deploy workflow configuration

--- a/.github/workflows/main_theboys-sirha.yml
+++ b/.github/workflows/main_theboys-sirha.yml
@@ -34,7 +34,9 @@ jobs:
           run: mvn -B test --show-version
 
   build:
+    name: Build JAR (main)
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     permissions:
       contents: read #This is required for actions/checkout
 
