Fix SonarQube host URL in workflow file

--- a/.github/workflows/main_theboys-sirha.yml
+++ b/.github/workflows/main_theboys-sirha.yml
@@ -89,6 +89,6 @@ jobs:
         uses: sonarsource/sonarqube-scan-action@master
         env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-            SONAR_HOST_URL: 'https://sonarcloude.io/'
+            SONAR_HOST_URL: 'https://sonarcloud.io/'
             
           
