--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,9 @@
 		<java.version>17</java.version>
 		<sonar.projectKey>library</sonar.projectKey>
 		<sonar.projectName>library</sonar.projectName>
-		<sonar.host.url>http://localhost:9000</sonar.host.url>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>SIRHA-TheBoys</sonar.organization>
+		<sonar.projectKey>sirha-theboys</sonar.projectKey>
 		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.coverage.exclusions>src//configurators/*</sonar.coverage.exclusions>
 	</properties>
