--- a/.github/workflows/main_theboys-sirha.yml
+++ b/.github/workflows/main_theboys-sirha.yml
@@ -90,5 +90,11 @@ jobs:
         env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             SONAR_HOST_URL: 'https://sonarcloud.io'
+        with:
+          args: >
+            -Dsonar.projectKey=sirha-theboys
+            -Dsonar.organization=sirha-theboys
+            -Dsonar.java.binaries=target
+          
             
           
