--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.organization>SIRHA-TheBoys</sonar.organization>
-		<sonar.projectKey>SIRHA-TheBoys_TheBoys-Backend</sonar.projectKey>
+		<sonar.organization>sirha-theboys</sonar.organization>
+		<sonar.projectKey>sirha-theboys_TheBoys-Backend</sonar.projectKey>
 		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.coverage.exclusions>src//configurators/*</sonar.coverage.exclusions>
 
