--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-		<sonar.projectKey>library</sonar.projectKey>
-		<sonar.projectName>library</sonar.projectName>
-		<sonar.host.url>http://localhost:9000</sonar.host.url>
-		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-		<sonar.coverage.exclusions>src//configurators/*</sonar.coverage.exclusions>
+		<sonar.organization>sirha-theboys</sonar.organization>
 	</properties>
 	<dependencies>
 		<dependency>
