--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
 	<properties>
 		<java.version>17</java.version>
 		<sonar.organization>sirha-theboys</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>sirha-theboys</sonar.organization>
+		<sonar.projectKey>SIRHA-TheBoys_TheBoys-Backend</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
